--- a/.github/workflows/test-targets-workflow.yml
+++ b/.github/workflows/test-targets-workflow.yml
@@ -29,7 +29,7 @@ jobs:
           
       - name: Install packages from renv.lock (with cache)
         if: ${{ !env.ACT }}  
-        uses: r-lib/actions/setup-renv@master
+        uses: r-lib/actions/setup-renv@v2
         with:
           cache-version: 2
 
